version 1.8.7, in progress
- GUI enhancement: add apparatus to help keep track of
  gretl windows
- GUI menus: clean-up and consolidation
- "dataset" command: document the "clear" keyword
- "rmplot" command: save $test and $pvalue
- "restrict" with --bootstrap option: record $test and
  $pvalue
- Fix bug: crash on error in user_matrix_ols()
- Fix bug: "append" for data should work in more cases
- Fix bug: saving a model when there is already a saved
  model of the same name (in the GUI) caused a crash
- Fix bugs: miscellaneous small GUI bugs
- Fix bug: setting of sub-sample information of models
  estimated with a loop construct
- Fix bug: floating-point exception when modulus operator is 
  given non-integral arguments
- Fix bug: text search not wrapping properly if the cursor
  is at the end of a text buffer

11/25/2008 version 1.8.6
- Fix bug: the "print" command for series fails after 
  exiting a loop with the --progressive option set
- ARIMAX models: follow the practice of most software
  and difference both the dependent variable and the
  exogenous regressors; a new option, --y-diff-only,
  restores the old behavior of leaving the regressors in
  levels.  This resolves bug 1972626.
- arima: fix some "corner case" bugs and extend the options
  that can be controlled via the GUI
- Add hyperbolic functions, asinh and friends
- heckit: use analytical score, and use hyperbolic
  transformation in estimating rho
- Fix bug: a native gdt file made from imported data could
  end up containing non-UTF-8 characters (and hence not
  be openable)
- Fix bug: the internal $error variable associated with
  the --continue option to (e.g.) "arima" could get stuck
  on within a command loop
- Fix bug: ensure that the "dataset addobs" command is
  recorded in the session command log when observations
  are added in the course of forecasting
- Fix bug: corruption in saving GARCH models in a session
  file
- "fcast": add a --plot option to generate a plot of the