@@ -1,3 +1,11 @@
+version 1.8.7, in progress
+
+With the new (and faster) Ziggurat implementation for the
+normal RNG, gretl 1.8.7 will not produce the same sequence
+of normal samples for a given random seed as gretl <= 1.8.6.
+However, you can force backward compatibility by doing
+"set normal_rand box-muller".
+
 11/25/2009 version 1.8.6
 
 ARIMAX models (i.e. ARIMA models with non-zero order of 
