@@ -26,6 +26,7 @@ enum extra_cmds {
     GR_XYZ,
     GR_BOX,
     GR_NBOX,
+    GR_QQ,
     GR_3D,
     COMPACT,
     EXPAND, 
