@@ -2,6 +2,8 @@ version 1.8.7, in progress
 - GUI enhancement: add apparatus to help keep track of
   gretl windows
 - GUI menus: clean-up and consolidation
+- New command: "qqplot"
+- Normal random samples: implement the Ziggurat method
 - "dataset" command: document the "clear" keyword
 - "rmplot" command: save $test and $pvalue
 - "restrict" with --bootstrap option: record $test and
@@ -10,13 +12,13 @@ version 1.8.7, in progress
 - Fix bug: "append" for data should work in more cases
 - Fix bug: saving a model when there is already a saved
   model of the same name (in the GUI) caused a crash
-- Fix bugs: miscellaneous small GUI bugs
-- Fix bug: setting of sub-sample information of models
+- Fix bug: setting of sub-sample information on models
   estimated with a loop construct
 - Fix bug: floating-point exception when modulus operator is 
   given non-integral arguments
 - Fix bug: text search not wrapping properly if the cursor
   is at the end of a text buffer
+- Fix bugs: miscellaneous small GUI bugs
 
 11/25/2008 version 1.8.6
 - Fix bug: the "print" command for series fails after 
